--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -16,9 +16,19 @@
 
 <body>
 
-<p><a href="index.html">[Table of Contents]</a></p>
+<div id="nav-block" class="nav-block">
+<span class="hierarchy-nav">
+[<a href="index.html">Table of Contents</a>]</span>
+</span>
+<hr class="nav-break"/>
+<span class="list-nav">
+<span class="previous-nav-link">[<a href="eldamo-intro-quenya-02.html">← Previous</a>]</span>
+<span class="next-nav-link">[<a href="eldamo-intro-quenya-04.html">Next →</a>]</span>
+</span>
+</div>
+<hr/>
 
-<center><h1><u>Eldamo Introductory Quenya - Chapter 3</u></h1></center>
+<center><h1><u>Chapter 3 - Consonant Pronunciation, Pronouns, Commands and Wishes</u></h1></center>
 
 <ul>
 <li><b><a href="#c3-1">3.1 Pronunciation: Consonants</a></b>
@@ -229,7 +239,7 @@
 <ul><li><i>pa.t.</i> ^<b>tencë</b> “wrote”</li></ul></li>
 <li><b>tecil</b> <i>n.</i> “pen”</li>
 <li><b>tehta</b> <i>n.</i> “written mark, diacritic”</li>
-<li><b>tengwa</b> <i>n.</i> “letter (individual)”</li>
+<li><b>tengwa</b> <i>n.</i> “letter (of the alphabet)”</li>
 <li><b>sarmë</b> <i>n.</i> “writing”</li>
 <li><b>yal-</b> <i>v.</i> “to summon, *call”
 <ul><li><i>pa.t.</i> *<b>yallë</b> “summoned, called”</li></ul></li>
@@ -351,45 +361,6 @@
 </ol>
 
 <p>Answers are in <a href="#a3-1">Answer Key 3.1</a> at the end of this chapter.</p>
-
-<h2><a id="a3-1"></a>Answer Key 3.1 [temporary location]</h2>
-
-<ol class="exercise-list" start="16">
-<li>My name [is] Lëa.</li>
-<li>Elrond told the history of Elves long ago to Aragorn.</li>
-<li>The girl is writing letters with a pen. ¹</li>
-<li>The man [human] is talking to the man [male]</li>
-<li>I called my daughter with my voice.</li>
-</ol>
-
-<ul>
-<li>Note ¹: This is “letters” like “a, b, c”, not written messages.</li>
-</ul>
-
-<ol class="exercise-list" start="21">
-<li><i>Estëan yondonya Miro.</i></li>
-<li><i>Tencel parma hyalinwen.</i></li>
-<li><i>I nís henta parmar i aranen.</i> ²</li>
-<li><i>I nettë quente quetta amilleryan.</i></li>
-<li><i>I nauco antanë tecil i seldon.</i></li>
-</ol>
-
-<ul>
-<li>Note ²: Based on the English preposition “to”, you might be tempted to say <i>i aranenna</i>, but that is really “towards the king”, as in “in the direction of the king”, which while technically feasible, is less likely to be the intent. Here the king is almost certainly the indirect object, which uses the dative case in Quenya: <i>aranen</i>.</li>
-</ul>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="21">
-<li><span class="transcribe" data-lang="q" data-value="Estëan yondonya Miro">Estëan yondonya Miro</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Tencel parma hyalinwen">Tencel parma hyalinwen</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I nís henta parmar i aranen">I nís henta parmar i aranen</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I nettë quente quetta amilleryan">I nettë quente quetta amilleryan</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I nauco antanë tecil i seldon">I nauco antanë tecil i seldon</span></li>
-</ol>
-
-<ol class="exercise-list" start="21">
-</ol>
 
 <h1><a id="c3-2"></a>3.2 Pronouns and Pronominal Suffixes</h1>
 
@@ -602,37 +573,6 @@
 
 <p>Answers are in <a href="#a3-2">Answer Key 3.2</a> at the end of this chapter.</p>
 
-<h2><a id="a3-2"></a>Answer Key 3.2 [temporary location]</h2>
-
-<ol class="exercise-list">
-<li>You (plural) are dancing on the hills.</li>
-<li>You (familiar) recited your poem and it was good.</li>
-<li>Your (polite) flute sings to me.</li>
-<li>Music calls our spirits.</li>
-<li>We (but not you) found the orc and we (but not you) are watching him/her now.</li>
-<li>Our (including you) songs are poems of elves, and they are good.</li>
-</ol>
-
-<ol class="exercise-list" start="7">
-<li><i>Tecilya nánë linta ar liltanes hyalinessë.</i></li>
-<li><i>Yondonta lírua lven.</i></li>
-<li><i>Samityë luine nyellë.</i></li>
-<li><i>Tompaldar yálar te.</i></li>
-<li><i>Lirnelmë aranelvan.</i></li>
-<li><i>I lindo sámë nandenya.</i></li>
-</ol>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="Tecilya nánë linta ar liltanes hyalinessë">Tecilya nánë linta ar liltanes hyalinessë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Yondonta lírua lven">Yondonta lírua lven</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Samityë luine nyellë">Samityë luine nyellë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Tompaldar yálar te">Tompaldar yálar te</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Lirnelmë aranelvan">Lirnelmë aranelvan</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I lindo sámë ñandenya">I lindo sámë ñandenya</span></li>
-</ol>
-
 <h1><a id="c3-3"></a>3.3 Culture Notes: Gender and Forms of Address</h1>
 
 <ul>
@@ -756,37 +696,6 @@
 </ol>
 
 <p>Answers are in <a href="#a3-3">Answer Key 3.3</a> at the end of this chapter.</p>
-
-<ol class="exercise-list">
-<li>Hail! Are you writing a book?</li>
-<li>Yes. It will be good.</li>
-<li>Oh, I want to read it.</li>
-<li>Give the pen to me please.</li>
-<li>I am doing it now.</li>
-<li>Thank you. (Go) to happiness.</li>
-</ol>
-
-<ol class="exercise-list" start="7">
-<li><i>Máriessë. Mára ná i túlel, tar.</i></li>
-<li><i>Ná, hesto. Cenin i carnel i macil.</i></li>
-<li><i>Ela! Carnenyes lyen, araninya.</i></li>
-<li><i>Fastas ni mai.</i></li>
-<li><i>Antëanyes lyen, araninya.</i></li>
-<li><i>Merin fara orcor sanen. Namárië!</i></li>
-</ol>
-
-<h2><a id="a3-3"></a>Answer Key 3.3 [temporary location]</h2>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="Máriessë. Mára ná i túlel, tar.">Máriessë. Mára ná i túlel, tar.</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Ná, hesto. Cenin i carnel i macil.">Ná, hesto. Cenin i carnel i macil.</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Ela. Carnenyes lyen, araninya.">Ela. Carnenyes lyen, araninya.</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Fastas ni mai.">Fastas ni mai.</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Antëanyes lyen, araninya.">Antëanyes lyen, araninya.</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Merin fara orcor sanen. Namárië!">Merin fara orcor sanen. Namárië!</span></li>
-</ol>
 
 <h1><a id="c3-4"></a>3.4 Future, Commands and Wishes</h1>
 
@@ -963,37 +872,6 @@
 
 <p>Answers are in <a href="#a3-4">Answer Key 3.4</a> at the end of this chapter.</p>
 
-<h2><a id="a3-4"></a>Answer Key 3.4 [temporary location]</h2>
-
-<ol class="exercise-list">
-<li>Come to the forest at the hour of sunset.</li>
-<li>I will see my mother tomorrow.</li>
-<li>I want to rest at night.</li>
-<li>The moon will rise up in the east.</li>
-<li>May the Sun shine on you (familiar) today.</li>
-<li>When I look towards Valinor, north [is] right and south [is] left.</li>
-</ol>
-
-<ol class="exercise-list" start="7">
-<li><i>Nai ambarónë lauca len (ná).</i></li>
-<li><i>I oron haiya mal cenuvalves arinessë.</i></li>
-<li><i>Á harë ré i rottossë.</i></li>
-<li><i>Isil menuva undu númenessë.</i></li>
-<li><i>Anar calë auressë.</i></li>
-<li><i>Túlen mindonenna nöa.</i></li>
-</ol>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="Nai ambarónë lauca len">Nai ambarónë lauca len</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I oron haiya mal cenuvalves arinessë">I oron haiya mal cenuvalves arinessë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Á harë ré i rottossë">Á harë ré i rottossë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Iþil menuva undu númenessë">Iþil menuva undu númenessë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Anar calë auressë">Anar calë auressë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Túlen mindonenna nöa">Túlen mindonenna nöa</span></li>
-</ol>
-
 <h1><a id="c3-5"></a>3.5 Guided Reading: Namárië</h1>
 
 <p>One of Tolkien’s most famous Quenya texts is the poem <i>Namárië</i>, recited by Galadriel to the fellowship of the ring as they departed Lórien (<i>The Lord of the Rings</i>, Book 2, Chapter 8: Farewell to Lórien). We now know almost enough to translate a portion of that poem, if we introduce a bit more vocabulary:</p>
@@ -1089,7 +967,7 @@ Maybe even thou shalt find it. Farewell!
 <ul><li><i>pa.t.</i> ^<b>tencë</b> “wrote”</li></ul></li>
 <li><b>tecil</b> <i>n.</i> “pen”</li>
 <li><b>tehta</b> <i>n.</i> “written mark, diacritic”</li>
-<li><b>tengwa</b> <i>n.</i> “letter (individual)”</li>
+<li><b>tengwa</b> <i>n.</i> “letter (of the alphabet)”</li>
 <li><b>sarmë</b> <i>n.</i> “writing”</li>
 <li><b>yal-</b> <i>v.</i> “to summon, *call”
 <ul><li><i>pa.t.</i> *<b>yallë</b> “summoned, called”</li></ul></li>
@@ -1124,7 +1002,7 @@ Maybe even thou shalt find it. Farewell!
 <ul class="vocab-list">
 <li><b>a</b> <i>interj.</i> “oh”</li>
 <li><b>á</b> <i>particle.</i> “(request/command)”</li>
-<li><b>ai</b> <i>interj.</i> “ah”</li>
+<li><b>ai</b> <i>interj.</i> “ah, alas”</li>
 <li><b>aiya</b> <i>interj.</i> “hail”</li>
 <li><b>ela</b> <i>interj.</i> “behold”</li>
 <li><b>fasta-</b> <i>v.</i> “to please”
@@ -1309,9 +1187,134 @@ Maybe even thou shalt find it. Farewell!
 </ul></li>
 </ul>
 
-<h2>Answer Keys TBD</h2>
+<h2><a id="a3-1"></a>Answer Key 3.1</h2>
 
-<p>Answer keys for exercises will be moved here after the chapter has been reviewed.</p>
+<ol class="exercise-list" start="16">
+<li>My name [is] Lëa.</li>
+<li>Elrond told the history of Elves long ago to Aragorn.</li>
+<li>The girl is writing letters with a pen. ¹</li>
+<li>The man [human] is talking to the man [male]</li>
+<li>I called my daughter with my voice.</li>
+</ol>
+
+<ul>
+<li>Note ¹: This is “letters” like “a, b, c”, not written messages.</li>
+</ul>
+
+<ol class="exercise-list" start="21">
+<li><i>Estëan yondonya Miro.</i></li>
+<li><i>Tencel parma hyalinwen.</i></li>
+<li><i>I nís henta parmar i aranen.</i> ²</li>
+<li><i>I nettë quente quetta amilleryan.</i></li>
+<li><i>I nauco antanë tecil i seldon.</i></li>
+</ol>
+
+<ul>
+<li>Note ²: Based on the English preposition “to”, you might be tempted to say <i>i aranenna</i>, but that is really “towards the king”, as in “in the direction of the king”, which while technically feasible, is less likely to be the intent. Here the king is almost certainly the indirect object, which uses the dative case in Quenya: <i>aranen</i>.</li>
+</ul>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="21">
+<li><span class="transcribe" data-lang="q" data-value="Estëan yondonya Miro">Estëan yondonya Miro</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Tencel parma hyalinwen">Tencel parma hyalinwen</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I nís henta parmar i aranen">I nís henta parmar i aranen</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I nettë quente quetta amilleryan">I nettë quente quetta amilleryan</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I nauco antanë tecil i seldon">I nauco antanë tecil i seldon</span></li>
+</ol>
+
+<h2><a id="a3-2"></a>Answer Key 3.2</h2>
+
+<ol class="exercise-list">
+<li>You (plural) are dancing on the hills.</li>
+<li>You (familiar) recited your poem and it was good.</li>
+<li>Your (polite) flute sings to me.</li>
+<li>Music calls our spirits.</li>
+<li>We (but not you) found the orc and we (but not you) are watching him/her now.</li>
+<li>Our (including you) songs are poems of elves, and they are good.</li>
+</ol>
+
+<ol class="exercise-list" start="7">
+<li><i>Tecilya nánë linta ar liltanes hyalinessë.</i></li>
+<li><i>Yondonta lírua ven.</i></li>
+<li><i>Samityë luine nyellë.</i></li>
+<li><i>Tompaldar yálar te.</i></li>
+<li><i>Lirnelmë aranelvan.</i></li>
+<li><i>I lindo sámë nandenya.</i></li>
+</ol>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="7">
+<li><span class="transcribe" data-lang="q" data-value="Tecilya nánë linta ar liltanes hyalinessë">Tecilya nánë linta ar liltanes hyalinessë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Yondonta lírua ven">Yondonta lírua ven</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Samityë luine nyellë">Samityë luine nyellë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Tompaldar yálar te">Tompaldar yálar te</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Lirnelmë aranelvan">Lirnelmë aranelvan</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I lindo sámë ñandenya">I lindo sámë ñandenya</span></li>
+</ol>
+
+<h2><a id="a3-3"></a>Answer Key 3.3</h2>
+
+<ol class="exercise-list">
+<li>Hail! Are you writing a book?</li>
+<li>Yes. It will be good.</li>
+<li>Oh, I want to read it.</li>
+<li>Give the pen to me please.</li>
+<li>I am doing it now.</li>
+<li>Thank you. (Go) to happiness.</li>
+</ol>
+
+<ol class="exercise-list" start="7">
+<li><i>Máriessë. Mára ná i túlel, tar.</i></li>
+<li><i>Ná, hesto. Cenin i carnel i macil.</i></li>
+<li><i>Ela! Carnenyes lyen, araninya.</i></li>
+<li><i>Fastas ni mai.</i></li>
+<li><i>Antëanyes lyen, araninya.</i></li>
+<li><i>Merin fara orcor sanen. Namárië!</i></li>
+</ol>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="7">
+<li><span class="transcribe" data-lang="q" data-value="Máriessë. Mára ná i túlel, tar.">Máriessë. Mára ná i túlel, tar.</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Ná, hesto. Cenin i carnel i macil.">Ná, hesto. Cenin i carnel i macil.</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Ela. Carnenyes lyen, araninya.">Ela. Carnenyes lyen, araninya.</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Fastas ni mai.">Fastas ni mai.</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Antëanyes lyen, araninya.">Antëanyes lyen, araninya.</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Merin fara orcor sanen. Namárië!">Merin fara orcor sanen. Namárië!</span></li>
+</ol>
+
+<h2><a id="a3-4"></a>Answer Key 3.4</h2>
+
+<ol class="exercise-list">
+<li>Come to the forest at the hour of sunset.</li>
+<li>I will see my mother tomorrow.</li>
+<li>I want to rest at night.</li>
+<li>The moon will rise up in the east.</li>
+<li>May the Sun shine on you (familiar) today.</li>
+<li>When I look towards Valinor, north [is] right and south [is] left.</li>
+</ol>
+
+<ol class="exercise-list" start="7">
+<li><i>Nai ambarónë lauca len (ná).</i></li>
+<li><i>I oron haiya mal cenuvalves arinessë.</i></li>
+<li><i>Á harë ré i rottossë.</i></li>
+<li><i>Isil menuva undu númenessë.</i></li>
+<li><i>Anar calë auressë.</i></li>
+<li><i>Túlen mindonenna nöa.</i></li>
+</ol>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="7">
+<li><span class="transcribe" data-lang="q" data-value="Nai ambarónë lauca len">Nai ambarónë lauca len</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I oron haiya mal cenuvalves arinessë">I oron haiya mal cenuvalves arinessë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Á harë ré i rottossë">Á harë ré i rottossë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Iþil menuva undu númenessë">Iþil menuva undu númenessë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Anar calë auressë">Anar calë auressë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Túlen mindonenna nöa">Túlen mindonenna nöa</span></li>
+</ol>
 
 </body>
 </html>
