--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-07.html
@@ -16,9 +16,19 @@
 
 <body>
 
-<p><a href="index.html">[Table of Contents]</a></p>
+<div id="nav-block" class="nav-block">
+<span class="hierarchy-nav">
+[<a href="index.html">Table of Contents</a>]</span>
+</span>
+<hr class="nav-break"/>
+<span class="list-nav">
+<span class="previous-nav-link">[<a href="eldamo-intro-quenya-06.html">← Previous</a>]</span>
+<span class="next-nav-link">[<a href="eldamo-intro-quenya-08.html">Next →</a>]</span>
+</span>
+</div>
+<hr/>
 
-<center><h1><u>Eldamo Introductory Quenya - Chapter 7</u></h1></center>
+<center><h1><u>Chapter 7 - More Pronouns, Verbal Nouns, Adverbial Noun Cases</u></h1></center>
 
 <ul>
 <li><b><a href="#c7-1">7.1 Emphatic and Other Pronouns</a></b>
@@ -232,7 +242,7 @@
 <li><b>olor</b> <i>n.</i> “dream”</li>
 <li><b>quel-</b> <i>v.</i> “to fade”
 <ul><li><i>pa.t.</i> ^<b>quélë</b> “faded”</li></ul></li>
-<li><b>ser-</b> <i>v.</i> “to rest”
+<li><b>ser-</b> <i>v.</i> “to rest, tarry”
 <ul><li><i>pa.t.</i> <b>sérë</b> “rested; tarried”</li></ul></li>
 <li><b>sérë</b> <i>n.</i> “rest, repose”</li>
 </ul>
@@ -299,37 +309,6 @@
 </ol>
 
 <p>Answers are in <a href="#a7-1">Answer Key 7.1</a> at the end of this chapter.</p>
-
-<h2><a id="a7-1"></a>Answer Key 7.1 [temporary location]</h2>
-
-<ol class="exercise-list">
-<li>Even he will die from [by means of] a sword.</li>
-<li>I want that even you will find peace.</li>
-<li>Even they sleep at night.</li>
-<li>Someone lived in this cave.</li>
-<li>The orcs slew <u>him/her</u> but not <u>him/her</u> [the other].</li>
-<li>The dwarf saw the man [male] and he [the man] rested in the house.</li>
-</ol>
-
-<ol class="exercise-list" start="7">
-<li><i>Elvë uir alfírimë.</i></li>
-<li><i>Antuvan eldë massali.</i></li>
-<li><i>Túventë ma nöa.</i></li>
-<li><i>Merin i mo rehta inyë.</i></li>
-<li><i>I hesto quentë i ohtaren ar hye mennë i ostonna.</i></li>
-<li><i>I hesto quentë i ohtaren ar mennes i ostonna.</i></li>
-</ol>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="Elvë uir alfírimë">Elvë uir alfírimë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Antuvan eldë massali">Antuvan eldë massali</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Túventë ma nöa">Túventë ma nöa</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Merin i mo rehta inyë">Merin i mo rehta inyë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I hesto quentë i ohtaren ar hye mennë i ostonna">I hesto quentë i ohtaren ar hye mennë i ostonna</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I hesto quentë i ohtaren ar mennes i ostonna">I hesto quentë i ohtaren ar mennes i ostonna</span></li>
-</ol>
 
 <h1><a id="c7-2"></a>7.2 Infinitives and Gerunds</h1>
 
@@ -457,7 +436,7 @@
 <li><i>pa.t.</i> *<b>nurtanë</b> “hid [something]”</li></ul></li>
 <li><b>pilin</b> (<b>pilind-</b>) <i>n.</i> “arrow”</li>
 <li>^<b>pimpë</b> <i>n.</i> “tail”</li>
-<li><b>pol-</b> <i>v.</i> “can, to be able [to]”
+<li><b>pol-</b> <i>v.</i> “can, to be able to”
 <ul><li><i>pa.t.</i> *<b>pollë</b> “could, was able to”</li></ul></li>
 <li><b>quessë</b> <i>n.</i> “feather”</li>
 <li><b>quinga</b> <i>n.</i> “bow (for shooting)”</li>
@@ -493,8 +472,8 @@
 <li><b>Gerund:</b> The gerund is formed with the suffix <i>-ië</i>: <i>carië</i> “doing”.
 <ul>
 <li>This replaces the final <i>a</i> of a-stem verbs: <i>antië</i> “giving”.</li>
-<li>The suffix become <i>-yë</i> for u-stem verbs: <i>liruyë</i> “(gaily) singing”.</li>
-<li>It functions like a noun and can receive noun cases, but cannot (usually) be made plural.</li>
+<li>The suffix becomes <i>-yë</i> for u-stem verbs: <i>liruyë</i> “(gaily) singing”.</li>
+<li>The gerund functions like a noun and can receive noun cases, but cannot (usually) be made plural.</li>
 </ul></li>
 </ul>
 
@@ -523,41 +502,6 @@
 </ol>
 
 <p>Answers are in <a href="#a7-2">Answer Key 7.2</a> at the end of this chapter.</p>
-
-<h2><a id="a7-2"></a>Answer Key 7.2 [temporary location]</h2>
-
-<ol class="exercise-list">
-<li>The hunting dog wants to chase rabbits.</li>
-<li>You can sneak to find prey in the forest.</li>
-<li>To hide [or hiding] him/her saved the child.</li>
-<li>Finish your hunting it tomorrow. ¹</li>
-<li>Hunting animals gives food to my people. ¹</li>
-<li>We [but not you] went to the forest for trapping.</li>
-</ol>
-
-<ul>
-<li>Note ¹: Sentence #4 describes a particular instance of hunting (your hunting it tomorrow) while #5 describes hunting as a general activity (hunting animals), hence the use of the particular infinitive <i>faraitalyas</i> vs. the gerund <i>farië</i>.</li>
-</ul>
-
-<ol class="exercise-list" start="7">
-<li><i>I quessi aiwion (nár) mára pilin carien.</i></li>
-<li><i>Mundo rassë ui anda.</i></li>
-<li><i>Polin norta rocco ilya aurë.</i></li>
-<li><i>Aiwëo ráma samë quesseli.</i></li>
-<li><i>Hirnen quingarya nu i alda.</i></li>
-<li><i>Hiritanyas tana i nás raxessë.</i></li>
-</ol>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="I quessi aiwion nár mára pilin carien">I quessi aiwion nár mára pilin carien</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Mundo rassë ui anda">Mundo rassë ui anda</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Polin norta rocco ilya aurë">Polin norta rocco ilya aurë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Aiwëo ráma samë quesseli">Aiwëo ráma samë quesseli</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Hirnen quingarya nu i alda">Hirnen quingarya nu i alda</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Hiritanyas tana i nás raxessë">Hiritanyas tana i nás raxessë</span></li>
-</ol>
 
 <h1><a id="c7-3"></a>7.3 Adverbial Noun Cases</h1>
 
@@ -682,7 +626,7 @@
 
 <ul>
 <li>After <i>r, l</i>, it becomes <i>-men</i>: <i>nér</i> (<i>ner-</i>) → <i>nermen</i> “by (means of) a man [male]”; <i>tál</i> (<i>tal-</i>) → <i>talmen</i> “by (means of) a foot”.</li>
-<li>After <i>n, t</i> it becomes <i>-wen</i>: <i>nén</i> (<i>nen-</i>) → <i>nenwen</i> “by (means of) water”, <i>nat</i> → <i>natwen</i> “by (means of) a thing”.</li>
+<li>After <i>n, t, c</i> it becomes <i>-wen</i>: <i>nén</i> (<i>nen-</i>) → <i>nenwen</i> “by (means of) water”, <i>nat</i> → <i>natwen</i> “by (means of) a thing”.</li>
 <li>After <i>s</i> (stem <i>r-</i>), it becomes <i>-(r)men</i>, with <i>r</i> replacing the final <i>s</i>: <i>cas</i> (<i>car-</i>) → <i>carmen</i> “by (means of) a head”.</li>
 <li>After more complex noun stems, it becomes <i>-anen</i>: <i>umbar</i> (<i>umbart-</i>) → <i>umbartanen</i> “by (means of) fate”.</li>
 </ul>
@@ -708,7 +652,7 @@
 
 <ul class="vocab-list">
 <li><b>ana</b> <i>prep.</i> “to, towards” ¹</li>
-<li><b>ara</b> <i>prep.</i> “beside” ¹</li>
+<li><b>ara</b> <i>prep.</i> “beside, next to, by” ¹</li>
 <li><b>endë</b> <i>n.</i> “centre”</li>
 <li><b>endëa</b> <i>adj.</i> “middle”</li>
 <li><b>et</b> <i>prep.</i> “out (of)”</li>
@@ -781,7 +725,7 @@
 
 <ul>
 <li>After <i>r, l</i>, it becomes <i>-men</i>: <i>nér</i> (<i>ner-</i>) → <i>nermen</i> “by (means of) a man [male]”; <i>tál</i> (<i>tal-</i>) → <i>talmen</i> “by (means of) a foot”.</li>
-<li>After <i>n, t</i> it becomes <i>-wen</i>: <i>nén</i> (<i>nen-</i>) → <i>nenwen</i> “by (means of) water”, <i>nat</i> → <i>natwen</i> “by (means of) a thing”.</li>
+<li>After <i>n, t, c</i> it becomes <i>-wen</i>: <i>nén</i> (<i>nen-</i>) → <i>nenwen</i> “by (means of) water”, <i>nat</i> → <i>natwen</i> “by (means of) a thing”.</li>
 <li>After <i>s</i> (stem <i>r-</i>), it becomes <i>-(r)men</i>, with <i>r</i> replacing the final <i>s</i>: <i>cas</i> (<i>car-</i>) → <i>carmen</i> “by (means of) a head”.</li>
 <li>After more complex noun stems, it becomes <i>-anen</i>: <i>umbar</i> (<i>umbart-</i>) → <i>umbartanen</i> “by (means of) fate”.</li>
 </ul>
@@ -813,37 +757,6 @@
 </ol>
 
 <p>Answers are in <a href="#a7-3">Answer Key 7.3</a> at the end of this chapter.</p>
-
-<h2><a id="a7-3"></a>Answer Key 7.3 [temporary location]</h2>
-
-<ol class="exercise-list">
-<li>We [but not you] went to the center of the forest.</li>
-<li>The city sits among hills.</li>
-<li>The orcs are going into the cave.</li>
-<li>I will see the captain at night.</li>
-<li>The men came out of the towers.</li>
-<li>The men slew orcs with [by means of] swords.</li>
-</ol>
-
-<ol class="exercise-list" start="7">
-<li><i>I elda mennë ó i naucor i mindonna.</i></li>
-<li><i>I nissi túlar tanomello.</i></li>
-<li><i>I nér tencë i quenta tecilmen.</i></li>
-<li><i>I aran apátië sundollo inganna i mindono.</i></li>
-<li><i>I cöa harë endessë osto.</i></li>
-<li><i>I tárië oronto tirë or i nando.</i></li>
-</ol>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="I elda mennë ó i naucor i mindonna">I elda mennë ó i naucor i mindonna</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I nissi túlar tanomello">I nissi túlar tanomello</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I nér tencë i quenta tecilmen">I nér tencë i quenta tecilmen</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I aran apátië þundollo inganna i mindono">I aran apátië þundollo inganna i mindono</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I cöa harë endessë osto">I cöa harë endessë osto</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I tárië oronto tirë or i nando">I tárië oronto tirë or i nando</span></li>
-</ol>
 
 <h1><a id="c7-4"></a>7.4 Culture Notes: Elvish Directions</h1>
 
@@ -888,7 +801,7 @@
 <li><b>i</b> <i>pron.</i> “who, what, which (relative pronoun)” ¹</li>
 <li><b>hya</b> <i>conj.</i> “or”</li>
 <li><b>mal</b> <i>conj.</i> “but”</li>
-<li><b>násië</b> <i>adv.</i> “*amen, (lit.) may it be so” ²</li>
+<li><b>násië</b> <i>adv.</i> “amen, may it be so” ²</li>
 <li><b>sië</b> <i>adv.</i> “thus” ²</li>
 <li><b>úsië</b> <i>adv.</i> “on the contrary” ²</li>
 <li><b>ya</b> <i>pron.</i> “that, which (relative pronoun)”</li>
@@ -1038,7 +951,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <li><b>olor</b> <i>n.</i> “dream”</li>
 <li><b>quel-</b> <i>v.</i> “to fade”
 <ul><li><i>pa.t.</i> ^<b>quélë</b> “faded”</li></ul></li>
-<li><b>ser-</b> <i>v.</i> “to rest”
+<li><b>ser-</b> <i>v.</i> “to rest, tarry”
 <ul><li><i>pa.t.</i> <b>sérë</b> “rested; tarried”</li></ul></li>
 <li><b>sérë</b> <i>n.</i> “rest, repose”</li>
 </ul>
@@ -1086,7 +999,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 
 <ul class="vocab-list">
 <li><b>ana</b> <i>prep.</i> “to, towards” ¹</li>
-<li><b>ara</b> <i>prep.</i> “beside” ¹</li>
+<li><b>ara</b> <i>prep.</i> “beside, next to, by” ¹</li>
 <li><b>endë</b> <i>n.</i> “centre”</li>
 <li><b>endëa</b> <i>adj.</i> “middle”</li>
 <li><b>et</b> <i>prep.</i> “out (of)”</li>
@@ -1126,7 +1039,7 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <li><b>i</b> <i>pron.</i> “who, what, which (relative pronoun)” ¹</li>
 <li><b>hya</b> <i>conj.</i> “or”</li>
 <li><b>mal</b> <i>conj.</i> “but”</li>
-<li><b>násië</b> <i>adv.</i> “*amen, (lit.) may it be so” ²</li>
+<li><b>násië</b> <i>adv.</i> “amen, may it be so” ²</li>
 <li><b>sië</b> <i>adv.</i> “thus” ²</li>
 <li><b>úsië</b> <i>adv.</i> “on the contrary” ²</li>
 <li><b>ya</b> <i>pron.</i> “that, which (relative pronoun)”</li>
@@ -1147,10 +1060,10 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <li><b>cendelë</b> <i>n.</i> “face, *visage”</li>
 <li><b>epë</b> <i>prep.</i> “after [time]; before [place]”</li>
 <li><b>epetai</b> <i>conj.</i> “consequently”</li>
-<li><b>forya</b> <i>adj.</i> “right”</li>
-<li><b>hyarya</b> <i>adj.</i> “left”</li>
-<li><b>nó</b> <i>prep.</i> “before [time]; at back [place]”</li>
-<li><b>pol-</b> <i>v.</i> “can, to be able [to]”
+<li><b>forya</b> <i>adj.</i> “right (hand)”</li>
+<li><b>hyarya</b> <i>adj.</i> “left (hand)”</li>
+<li><b>nó</b> <i>prep.</i> “before [time]; at back of [place]”</li>
+<li><b>pol-</b> <i>v.</i> “can, to be able to”
 <ul><li><i>pa.t.</i> *<b>pollë</b> “could, was able to”</li></ul></li>
 <li><b>quer-</b> <i>v.</i> “to turn”
 <ul><li><i>pa.t.</i> <b>quernë</b> “turned”</li></ul></li>
@@ -1221,8 +1134,8 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 <li><b>Gerund:</b> The gerund is formed with the suffix <i>-ië</i>: <i>carië</i> “doing”.
 <ul>
 <li>This replaces the final <i>a</i> of a-stem verbs: <i>antië</i> “giving”.</li>
-<li>The suffix become <i>-yë</i> for u-stem verbs: <i>liruyë</i> “(gaily) singing”.</li>
-<li>It functions like a noun and can receive noun cases, but cannot (usually) be made plural.</li>
+<li>The suffix becomes <i>-yë</i> for u-stem verbs: <i>liruyë</i> “(gaily) singing”.</li>
+<li>The gerund functions like a noun and can receive noun cases, but cannot (usually) be made plural.</li>
 </ul></li>
 </ul>
 
@@ -1262,16 +1175,109 @@ and if northwards, it pointed towards Aman [the Blessed Land].
 
 <ul>
 <li>After <i>r, l</i>, it becomes <i>-men</i>: <i>nér</i> (<i>ner-</i>) → <i>nermen</i> “by (means of) a man [male]”; <i>tál</i> (<i>tal-</i>) → <i>talmen</i> “by (means of) a foot”.</li>
-<li>After <i>n, t</i> it becomes <i>-wen</i>: <i>nén</i> (<i>nen-</i>) → <i>nenwen</i> “by (means of) water”, <i>nat</i> → <i>natwen</i> “by (means of) a thing”.</li>
+<li>After <i>n, t, c</i> it becomes <i>-wen</i>: <i>nén</i> (<i>nen-</i>) → <i>nenwen</i> “by (means of) water”, <i>nat</i> → <i>natwen</i> “by (means of) a thing”.</li>
 <li>After <i>s</i> (stem <i>r-</i>), it becomes <i>-(r)men</i>, with <i>r</i> replacing the final <i>s</i>: <i>cas</i> (<i>car-</i>) → <i>carmen</i> “by (means of) a head”.</li>
 <li>After more complex noun stems, it becomes <i>-anen</i>: <i>umbar</i> (<i>umbart-</i>) → <i>umbartanen</i> “by (means of) fate”.</li>
 </ul>
 
 <p>This last formation, with <i>-anen</i>, may have gradually replaced the assimilated forms in modern Quenya: <i>neranen</i>, etc.</p>
 
-<h2>Answer Keys TBD</h2>
+<h2><a id="a7-1"></a>Answer Key 7.1</h2>
 
-<p>Answer keys for exercises will be moved here after the chapter has been reviewed.</p>
+<ol class="exercise-list">
+<li>Even he will die from [by means of] a sword.</li>
+<li>I want that even you will find peace.</li>
+<li>Even they sleep at night.</li>
+<li>Someone lived in this cave.</li>
+<li>The orcs slew <u>him/her</u> but not <u>him/her</u> [the other].</li>
+<li>The dwarf saw the man [male] and he [the man] rested in the house.</li>
+</ol>
+
+<ol class="exercise-list" start="7">
+<li><i>Elvë uir alfírimë.</i></li>
+<li><i>Antuvan eldë massali.</i></li>
+<li><i>Túventë ma nöa.</i></li>
+<li><i>Merin i mo rehta inyë.</i></li>
+<li><i>I hesto quentë i ohtaren ar hye mennë i ostonna.</i></li>
+<li><i>I hesto quentë i ohtaren ar mennes i ostonna.</i></li>
+</ol>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="7">
+<li><span class="transcribe" data-lang="q" data-value="Elvë uir alfírimë">Elvë uir alfírimë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Antuvan eldë massali">Antuvan eldë massali</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Túventë ma nöa">Túventë ma nöa</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Merin i mo rehta inyë">Merin i mo rehta inyë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I hesto quentë i ohtaren ar hye mennë i ostonna">I hesto quentë i ohtaren ar hye mennë i ostonna</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I hesto quentë i ohtaren ar mennes i ostonna">I hesto quentë i ohtaren ar mennes i ostonna</span></li>
+</ol>
+
+<h2><a id="a7-2"></a>Answer Key 7.2</h2>
+
+<ol class="exercise-list">
+<li>The hunting dog wants to chase rabbits.</li>
+<li>You can sneak to find prey in the forest.</li>
+<li>To hide [or hiding] him/her saved the child.</li>
+<li>Finish your hunting it tomorrow. ¹</li>
+<li>Hunting animals gives food to my people. ¹</li>
+<li>We [but not you] went to the forest for trapping.</li>
+</ol>
+
+<ul>
+<li>Note ¹: Sentence #4 describes a particular instance of hunting (your hunting it tomorrow) while #5 describes hunting as a general activity (hunting animals), hence the use of the particular infinitive <i>faraitalyas</i> vs. the gerund <i>farië</i>.</li>
+</ul>
+
+<ol class="exercise-list" start="7">
+<li><i>I quessi aiwion (nár) mára pilin carien.</i></li>
+<li><i>Mundo rassë ui anda.</i></li>
+<li><i>Polin norta rocco ilya aurë.</i></li>
+<li><i>Aiwëo ráma samë quesseli.</i></li>
+<li><i>Hirnen quingarya nu i alda.</i></li>
+<li><i>Hiritanyas tana i nás raxessë.</i></li>
+</ol>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="7">
+<li><span class="transcribe" data-lang="q" data-value="I quessi aiwion nár mára pilin carien">I quessi aiwion nár mára pilin carien</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Mundo rassë ui anda">Mundo rassë ui anda</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Polin norta rocco ilya aurë">Polin norta rocco ilya aurë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Aiwëo ráma samë quesseli">Aiwëo ráma samë quesseli</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Hirnen quingarya nu i alda">Hirnen quingarya nu i alda</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Hiritanyas tana i nás raxessë">Hiritanyas tana i nás raxessë</span></li>
+</ol>
+
+<h2><a id="a7-3"></a>Answer Key 7.3</h2>
+
+<ol class="exercise-list">
+<li>We [but not you] went to the center of the forest.</li>
+<li>The city sits among hills.</li>
+<li>The orcs are going into the cave.</li>
+<li>I will see the captain at night.</li>
+<li>The men came out of the towers.</li>
+<li>The men slew orcs with [by means of] swords.</li>
+</ol>
+
+<ol class="exercise-list" start="7">
+<li><i>I elda mennë ó i naucor i mindonna.</i></li>
+<li><i>I nissi túlar tanomello.</i></li>
+<li><i>I nér tencë i quenta tecilmen.</i></li>
+<li><i>I aran apátië sundollo inganna i mindono.</i></li>
+<li><i>I cöa harë endessë osto.</i></li>
+<li><i>I tárië oronto tirë or i nando.</i></li>
+</ol>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="7">
+<li><span class="transcribe" data-lang="q" data-value="I elda mennë ó i naucor i mindonna">I elda mennë ó i naucor i mindonna</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I nissi túlar tanomello">I nissi túlar tanomello</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I nér tencë i quenta tecilmen">I nér tencë i quenta tecilmen</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I aran apátië þundollo inganna i mindono">I aran apátië þundollo inganna i mindono</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I cöa harë endessë osto">I cöa harë endessë osto</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I tárië oronto tirë or i nando">I tárië oronto tirë or i nando</span></li>
+</ol>
 
 </body>
 </html>
