--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-09.html
@@ -16,9 +16,19 @@
 
 <body>
 
-<p><a href="index.html">[Table of Contents]</a></p>
+<div id="nav-block" class="nav-block">
+<span class="hierarchy-nav">
+[<a href="index.html">Table of Contents</a>]</span>
+</span>
+<hr class="nav-break"/>
+<span class="list-nav">
+<span class="previous-nav-link">[<a href="eldamo-intro-quenya-08.html">← Previous</a>]</span>
+<span class="next-nav-link">[<a href="eldamo-intro-quenya-10.html">Next →</a>]</span>
+</span>
+</div>
+<hr/>
 
-<center><h1><u>Eldamo Introductory Quenya - Chapter 9</u></h1></center>
+<center><h1><u>Chapter 9 - Verbal Adjectives, Passive Voice, Adverbs, Comparison</u></h1></center>
 
 <ul>
 <li><b><a href="#c9-1">9.1 Verbal Adjectives</a></b>
@@ -315,7 +325,7 @@
 <li><b>anta-</b> <i>v.</i> “to give”
 <ul><li><i>pa.t.</i> <b>antanë</b> “gave”</li></ul></li>
 <li><b>armar</b> <i>n.</i> “goods [pl.]”</li>
-<li><b>cav-</b> <i>v.</i> “to receive”
+<li>#<b>cav-</b> <i>v.</i> “to receive”
 <ul><li><i>pa.t.</i> <b>cambë</b> “received”</li></ul></li>
 <li><b>harma</b> <i>n.</i> “treasure”</li>
 <li>^<b>lep-</b> <i>v.</i> “to take”
@@ -332,7 +342,7 @@
 <ul><li><i>pa.t.</i> *<b>pennë</b> “lacked”</li></ul></li>
 <li><b>penya</b> <i>adj.</i> “lacking, poor”</li>
 <li><b>sam-</b> <i>v.</i> “to have”
-<ul><li><i>pa.t.</i> <b>sáme</b> “had”</li></ul></li>
+<ul><li><i>pa.t.</i> <b>sámë</b> “had”</li></ul></li>
 <li><b>telpë</b> <i>n.</i> “silver, money”</li>
 </ul>
 
@@ -358,7 +368,7 @@
 </ul></li>
 <li><b>Other Verb Suffixes:</b>
 <ul>
-<li><i>-ima</i> “able to be done” (with vowel lengthening): <i>mátima</i> “edible”.</li>
+<li><i>-ima</i> “able to be done” (with vowel lengthening): <i>mátima</i> “edible = able to be eaten”.</li>
 <li><i>-itë</i> “able to do” (with added base vowel): <i>mataitë</i> “able to eat”.</li>
 <li><i>-ula</i> “prone to do”: <i>matula</i> “prone to eat = edacious, with ravenous appetite”.</li>
 </ul></li>
@@ -389,38 +399,6 @@
 </ol>
 
 <p>Answers are in <a href="#a9-1">Answer Key 9.1</a> at the end of this chapter.</p>
-
-<h2><a id="a9-1"></a>Answer Key 9.1 [temporary location]</h2>
-
-<ol class="exercise-list">
-<li>The treasure-giving king [is] rich.</li>
-<li>Tradeable goods [are] precious.</li>
-<li>The silver-having dwarf is not poor.</li>
-<li>Orcs want to find takeable treasure.</li>
-<li>The seized swords [are] lost.</li>
-<li>The men ran into the fallen gate.</li>
-
-</ol>
-
-<ol class="exercise-list" start="7">
-<li><i>I antaula perian penë telpë sí.</i></li>
-<li><i>Cavaitë mahar harë i coassë.</i></li>
-<li><i>Ilyë mahtailë ohtari qualuvar.</i></li>
-<li><i>Cavinë annar rehtaner i nettion alassë.</i></li>
-<li><i>I eldar antaner i lepinë armar i heston.</i></li>
-<li><i>I lepilë atani hander i mindonessë.</i></li>
-</ol>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="7">
-<li><span class="transcribe" data-lang="q" data-value="I antaula perian penë telpë sí">I antaula perian penë telpë sí</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Cavaitë mahar harë i coassë">Cavaitë mahar harë i coassë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Ilyë mahtailë ohtari qualuvar">Ilyë mahtailë ohtari qualuvar</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Cavinë annar rehtaner i nettion alassë">Cavinë annar rehtaner i nettion alassë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I eldar antaner i lepinë armar i heston">I eldar antaner i lepinë armar i heston</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I lepilë atani hander i mindonessë">I lepilë atani hander i mindonessë</span></li>
-</ol>
 
 <h1><a id="c9-2"></a>9.2 Impersonal Verbs and Passive Voice</h1>
 
@@ -571,35 +549,6 @@
 
 <p>Answers are in <a href="#a9-2">Answer Key 9.2</a> at the end of this chapter.</p>
 
-<h2><a id="a9-2"></a>Answer Key 9.2 [temporary location]</h2>
-
-<ol class="exercise-list">
-<li>It snows.</li>
-<li>Made the knife = the knife was made.</li>
-<li>One hammers nails when one builds a house.</li>
-<li>Tools [are] made with a forge.</li>
-</ol>
-
-<ol class="exercise-list" start="5">
-<li><i>Ulë.</i></li>
-<li><i>Mo catë macil curwenen.</i></li>
-<li><i>I emma nánë tacina i rambanna taxenen.</i></li>
-<li><i>Orë i tamon carita macil.</i> ¹</li>
-</ol>
-
-<ul>
-<li>Note ¹: The verb <i>or-</i> “to urge” is here used impersonally, so that “urges for the smith” means “the smith feels an urge”. This answer uses a particular infinitive <i>carita</i>, meaning the smith is feeling an urge to make a particular sword. If the smith felt an urge to make swords as a general activity, the ordinary infinitive would be used: <i>Orë i tamon carë macili.</i></li>
-</ul>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="5">
-<li><span class="transcribe" data-lang="q" data-value="Ulë">Ulë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Mo catë macil curwenen">Mo catë macil curwenen</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I emma nánë tacina i rambanna taxenen">I emma nánë tacina i rambanna taxenen</span></li>
-<li><span class="transcribe" data-lang="q" data-value="Orë i tamon carita macil">Orë i tamon carita macil</span></li>
-</ol>
-
 <h1><a id="c9-3"></a>9.3 Adverbs</h1>
 
 <ul>
@@ -671,7 +620,7 @@
 <ul class="vocab-list">
 <li><b>aqua</b> <i>adv.</i> “fully, completely”</li>
 <li><b>cé</b> <i>adv.</i> “maybe, possibly”</li>
-<li><b>en</b> <i>adv.</i> “yonder; then [future]”</li>
+<li><b>en</b> <i>adv.</i> “yonder; then (future)”</li>
 <li><b>né</b> <i>adv.</i> “ago”</li>
 <li><b>mai</b> <i>adv.</i> “well”</li>
 <li><b>néya</b> <i>adv.</i> “once, at one time”</li>
@@ -679,7 +628,7 @@
 <li><b>rië</b> <i>adv.</i> “only”</li>
 <li><b>ron(go)</b> <i>adv.</i> “soon”</li>
 <li><b>sí</b> <i>adv.</i> “now”</li>
-<li><b>tá</b> <i>adv.</i> “then [past]”</li>
+<li><b>tá</b> <i>adv.</i> “then (past)”</li>
 </ul>
 
 <p>Here are some vocabulary words having to do with clothing:</p>
@@ -710,7 +659,7 @@
 <ul><li>This is used when the adverb may be an attribute of the subject.</li></ul></li>
 <li>The suffix <i>-vë</i> can be used to turn an adjective into an adverb: <i>nornes andavë</i> “he ran long”.
 <ul><li>This is used when the adverb is not an attribute of the subject or is far removed from the verb.</li></ul></li>
-<li>Abstract nouns can be used as adverbs, often in an instrument sense: <i>nornes lintië</i> “he ran [with] speed”.
+<li>Abstract nouns can be used as adverbs, often in an instrumental sense: <i>nornes lintië</i> “he ran [with] speed”.
 <ul><li>This last option is more obscure than the other two.</li></ul></li>
 </ul>
 
@@ -735,31 +684,6 @@
 </ol>
 
 <p>Answers are in <a href="#a9-3">Answer Key 9.3</a> at the end of this chapter.</p>
-
-<h2><a id="a9-3"></a>Answer Key 9.3 [temporary location]</h2>
-
-<ol class="exercise-list">
-<li>The woman sewed swift[ly] the shirt.</li>
-<li>The halflings bore the ring long [for a long time].</li>
-<li>The elves will leave from Middle-earth soon.</li>
-<li>The well made jacket was found in the cave.</li>
-</ol>
-
-<ol class="exercise-list" start="5">
-<li><i>I rocco nornë linta.</i></li>
-<li><i>I rocco nornë lintië.</i></li>
-<li><i>I rocco nornë andavë.</i></li>
-<li><i>I rocco nornë mai.</i></li>
-</ol>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="5">
-<li><span class="transcribe" data-lang="q" data-value="I rocco nornë linta">I rocco nornë linta</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I rocco nornë lintië">I rocco nornë lintië</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I rocco nornë andavë">I rocco nornë andavë</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I rocco nornë mai">I rocco nornë mai</span></li>
-</ol>
 
 <h1><a id="c9-4"></a>9.4 Comparison and Intensives</h1>
 
@@ -991,31 +915,6 @@
 
 <p>Answers are in <a href="#a9-4">Answer Key 9.4</a> at the end of this chapter.</p>
 
-<h2><a id="a9-4"></a>Answer Key 9.4 [temporary location]</h2>
-
-<ol class="exercise-list">
-<li>The wind [is] cold beyond yesterday [= is colder than yesterday].</li>
-<li>The knife [is] very sharp.</li>
-<li>The cloak [is] very soft among clothing.</li>
-<li>Mithril [is the] hardest [most hard] of metals.</li>
-</ol>
-
-<ol class="exercise-list" start="5">
-<li><i>I nauco anfinwa.</i></li>
-<li><i>I atan finwa lá nauco.</i></li>
-<li><i>I elda anfinwa quenion.</i></li>
-<li><i>I istar arfinwa ilyaron.</i></li>
-</ol>
-
-<p>Tengwar answers:</p>
-
-<ol class="exercise-list tengwar-block" start="5">
-<li><span class="transcribe" data-lang="q" data-value="I nauco anfinwa">I nauco anfinwa</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I atan finwa lá nauco">I atan finwa lá nauco</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I elda anfinwa quenion">I elda anfinwa quenion</span></li>
-<li><span class="transcribe" data-lang="q" data-value="I istar arfinwa ilyaron">I istar arfinwa ilyaron</span></li>
-</ol>
-
 <h1><a id="c9-5"></a>9.5 Culture Notes: Calendar</h1>
 
 <ul>
@@ -1188,7 +1087,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <li><b>anta-</b> <i>v.</i> “to give”
 <ul><li><i>pa.t.</i> <b>antanë</b> “gave”</li></ul></li>
 <li><b>armar</b> <i>n.</i> “goods [pl.]”</li>
-<li><b>cav-</b> <i>v.</i> “to receive”
+<li>#<b>cav-</b> <i>v.</i> “to receive”
 <ul><li><i>pa.t.</i> <b>cambë</b> “received”</li></ul></li>
 <li><b>harma</b> <i>n.</i> “treasure”</li>
 <li>^<b>lep-</b> <i>v.</i> “to take”
@@ -1205,7 +1104,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <ul><li><i>pa.t.</i> *<b>pennë</b> “lacked”</li></ul></li>
 <li><b>penya</b> <i>adj.</i> “lacking, poor”</li>
 <li><b>sam-</b> <i>v.</i> “to have”
-<ul><li><i>pa.t.</i> <b>sáme</b> “had”</li></ul></li>
+<ul><li><i>pa.t.</i> <b>sámë</b> “had”</li></ul></li>
 <li><b>telpë</b> <i>n.</i> “silver, money”</li>
 </ul>
 
@@ -1236,7 +1135,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <ul class="vocab-list">
 <li><b>aqua</b> <i>adv.</i> “fully, completely”</li>
 <li><b>cé</b> <i>adv.</i> “maybe, possibly”</li>
-<li><b>en</b> <i>adv.</i> “yonder; then [future]”</li>
+<li><b>en</b> <i>adv.</i> “yonder; then (future)”</li>
 <li><b>né</b> <i>adv.</i> “ago”</li>
 <li><b>mai</b> <i>adv.</i> “well”</li>
 <li><b>néya</b> <i>adv.</i> “once, at one time”</li>
@@ -1244,7 +1143,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <li><b>rië</b> <i>adv.</i> “only”</li>
 <li><b>ron(go)</b> <i>adv.</i> “soon”</li>
 <li><b>sí</b> <i>adv.</i> “now”</li>
-<li><b>tá</b> <i>adv.</i> “then [past]”</li>
+<li><b>tá</b> <i>adv.</i> “then (past)”</li>
 </ul>
 
 <p><b><u>Clothing:</b></u></p>
@@ -1347,8 +1246,8 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <p><b><u>Miscellaneous:</b></u></p>
 
 <ul class="vocab-list">
-<li><b>amba</b> <i>adj.</i> “more (adj.)”</li>
-<li><b>ambë</b> <i>adv.</i> “more (adv.)”</li>
+<li><b>amba</b> <i>adj.</i> “more”</li>
+<li><b>ambë</b> <i>adv.</i> “more”</li>
 <li><b>fanta-</b> <i>v.</i> “to veil, cloak”
 <ul><li><i>pa.t.</i> <b>fantanë</b> “veiled, cloaked”</li></ul></li>
 <li><b>ferya-</b> <i>v.</i> “to ready, prepare”
@@ -1394,7 +1293,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 </ul></li>
 <li><b>Other Verb Suffixes:</b>
 <ul>
-<li><i>-ima</i> “able to be done” (with vowel lengthening): <i>mátima</i> “edible”.</li>
+<li><i>-ima</i> “able to be done” (with vowel lengthening): <i>mátima</i> “edible = able to be eaten”.</li>
 <li><i>-itë</i> “able to do” (with added base vowel): <i>mataitë</i> “able to eat”.</li>
 <li><i>-ula</i> “prone to do”: <i>matula</i> “prone to eat = edacious, with ravenous appetite”.</li>
 </ul></li>
@@ -1419,7 +1318,7 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 <ul><li>This is used when the adverb may be an attribute of the subject.</li></ul></li>
 <li>The suffix <i>-vë</i> can be used to turn an adjective into an adverb: <i>nornes andavë</i> “he ran long”.
 <ul><li>This is used when the adverb is not an attribute of the subject or is far removed from the verb.</li></ul></li>
-<li>Abstract nouns can be used as adverbs, often in an instrument sense: <i>nornes lintië</i> “he ran [with] speed”.
+<li>Abstract nouns can be used as adverbs, often in an instrumental sense: <i>nornes lintië</i> “he ran [with] speed”.
 <ul><li>This last option is more obscure than the other two.</li></ul></li>
 </ul>
 
@@ -1450,9 +1349,116 @@ ar <u>amanya</u> i yávë mónalyo Yésus</i>
 </ul>
 </ul>
 
-<h2>Answer Keys TBD</h2>
+<h2><a id="a9-1"></a>Answer Key 9.1</h2>
 
-<p>Answer keys for exercises will be moved here after the chapter has been reviewed.</p>
+<ol class="exercise-list">
+<li>The treasure-giving king [is] rich.</li>
+<li>Tradeable goods [are] precious.</li>
+<li>The silver-having dwarf is not poor.</li>
+<li>Orcs want to find takeable treasure.</li>
+<li>The seized swords [are] lost.</li>
+<li>The men ran into the fallen gate.</li>
+
+</ol>
+
+<ol class="exercise-list" start="7">
+<li><i>I antaula perian penë telpë sí.</i></li>
+<li><i>Cavaitë mahar harë i coassë.</i></li>
+<li><i>Ilyë mahtailë ohtari qualuvar.</i></li>
+<li><i>Cavinë annar rehtaner i nettion alassë.</i></li>
+<li><i>I eldar antaner i lepinë armar i heston.</i></li>
+<li><i>I lepilë atani hander i mindonessë.</i></li>
+</ol>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="7">
+<li><span class="transcribe" data-lang="q" data-value="I antaula perian penë telpë sí">I antaula perian penë telpë sí</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Cavaitë mahar harë i coassë">Cavaitë mahar harë i coassë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Ilyë mahtailë ohtari qualuvar">Ilyë mahtailë ohtari qualuvar</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Cavinë annar rehtaner i nettion alassë">Cavinë annar rehtaner i nettion alassë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I eldar antaner i lepinë armar i heston">I eldar antaner i lepinë armar i heston</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I lepilë atani hander i mindonessë">I lepilë atani hander i mindonessë</span></li>
+</ol>
+
+<h2><a id="a9-2"></a>Answer Key 9.2</h2>
+
+<ol class="exercise-list">
+<li>It snows.</li>
+<li>Made the knife = the knife was made.</li>
+<li>One hammers nails when one builds a house.</li>
+<li>Tools [are] made with a forge.</li>
+</ol>
+
+<ol class="exercise-list" start="5">
+<li><i>Ulë.</i></li>
+<li><i>Mo catë macil curwenen.</i></li>
+<li><i>I emma nánë tacina i rambanna taxenen.</i></li>
+<li><i>Orë i tamon carita macil.</i> ¹</li>
+</ol>
+
+<ul>
+<li>Note ¹: The verb <i>or-</i> “to urge” is here used impersonally, so that “urges for the smith” means “the smith feels an urge”. This answer uses a particular infinitive <i>carita</i>, meaning the smith is feeling an urge to make a particular sword. If the smith felt an urge to make swords as a general activity, the ordinary infinitive would be used: <i>Orë i tamon carë macili.</i></li>
+</ul>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="5">
+<li><span class="transcribe" data-lang="q" data-value="Ulë">Ulë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Mo catë macil curwenen">Mo catë macil curwenen</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I emma nánë tacina i rambanna taxenen">I emma nánë tacina i rambanna taxenen</span></li>
+<li><span class="transcribe" data-lang="q" data-value="Orë i tamon carita macil">Orë i tamon carita macil</span></li>
+</ol>
+
+<h2><a id="a9-3"></a>Answer Key 9.3</h2>
+
+<ol class="exercise-list">
+<li>The woman sewed swift[ly] the shirt.</li>
+<li>The halflings bore the ring long [for a long time].</li>
+<li>The elves will leave from Middle-earth soon.</li>
+<li>The well made jacket was found in the cave.</li>
+</ol>
+
+<ol class="exercise-list" start="5">
+<li><i>I rocco nornë linta.</i></li>
+<li><i>I rocco nornë lintië.</i></li>
+<li><i>I rocco nornë andavë.</i></li>
+<li><i>I rocco nornë mai.</i></li>
+</ol>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="5">
+<li><span class="transcribe" data-lang="q" data-value="I rocco nornë linta">I rocco nornë linta</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I rocco nornë lintië">I rocco nornë lintië</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I rocco nornë andavë">I rocco nornë andavë</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I rocco nornë mai">I rocco nornë mai</span></li>
+</ol>
+
+<h2><a id="a9-4"></a>Answer Key 9.4</h2>
+
+<ol class="exercise-list">
+<li>The wind [is] cold beyond yesterday [= is colder than yesterday].</li>
+<li>The knife [is] very sharp.</li>
+<li>The cloak [is] very soft among clothing.</li>
+<li>Mithril [is the] hardest [most hard] of metals.</li>
+</ol>
+
+<ol class="exercise-list" start="5">
+<li><i>I nauco anfinwa.</i></li>
+<li><i>I atan finwa lá nauco.</i></li>
+<li><i>I elda anfinwa quenion.</i></li>
+<li><i>I istar arfinwa ilyaron.</i></li>
+</ol>
+
+<p>Tengwar answers:</p>
+
+<ol class="exercise-list tengwar-block" start="5">
+<li><span class="transcribe" data-lang="q" data-value="I nauco anfinwa">I nauco anfinwa</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I atan finwa lá nauco">I atan finwa lá nauco</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I elda anfinwa quenion">I elda anfinwa quenion</span></li>
+<li><span class="transcribe" data-lang="q" data-value="I istar arfinwa ilyaron">I istar arfinwa ilyaron</span></li>
+</ol>
 
 </body>
 </html>
