--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-11.html
@@ -16,9 +16,19 @@
 
 <body>
 
-<p><a href="index.html">[Table of Contents]</a></p>
+<div id="nav-block" class="nav-block">
+<span class="hierarchy-nav">
+[<a href="index.html">Table of Contents</a>]</span>
+</span>
+<hr class="nav-break"/>
+<span class="list-nav">
+<span class="previous-nav-link">[<a href="eldamo-intro-quenya-10.html">← Previous</a>]</span>
+<span class="next-nav-link">[<a href="eldamo-intro-quenya-12.html">Next →</a>]</span>
+</span>
+</div>
+<hr/>
 
-<center><h1><u>Eldamo Introductory Quenya - Chapter 11</u></h1></center>
+<center><h1><u>Chapter 11 - Compound Tenses, Subjunctive, More Noun Classes</u></h1></center>
 
 <ul>
 <li><b><a href="#c11-1">11.1 Compound Tenses</a></b>
@@ -154,8 +164,6 @@
 
 <ul class="vocab-list">
 <li><b>alasaila</b> <i>adj.</i> “unwise”</li>
-<li><b>auta-</b> <i>v.</i> “to invent”
-<ul><li><i>pa.t.</i> *<b>autanë</b> “invented”</li></ul></li>
 <li><b>enyal-</b> <i>v.</i> “to recall, remember”
 <ul><li><i>pa.t.</i> *<b>enyallë</b> “recalled, remembered”</li></ul></li>
 <li><b>finya</b> <i>adj.</i> “clever”</li>
@@ -180,7 +188,7 @@
 <li><b>saila</b> <i>adj.</i> “wise”</li>
 <li>#<b>sana-</b> <i>v.</i> “to think”
 <ul><li><i>pa.t.</i> *<b>sananë</b> “thought”</li></ul></li>
-<li><b>sanar</b> <i>n.</i> “mind”</li>
+<li><b>sanar</b> <i>n.</i> “mind, thinker”</li>
 <li><b>sanwë</b> <i>n.</i> “thought”</li>
 <li><b>sav-</b> <i>v.</i> “to believe”
 <ul><li><i>pa.t.</i> *<b>sávë</b> “believed”</li></ul></li>
@@ -443,10 +451,10 @@
 <li><b>ainas</b> (<b>*ainass-</b>) <i>n.</i> “shrine”</li>
 <li><b>ainu</b> <i>n.</i> “angel, holy spirit (m.)”</li>
 <li><b>aini</b> <i>n.</i> “angel, holy spirit (f.)”</li>
-<li><b>airë</b> (<b>airi-</b>) <i>n.</i> “holiness”</li>
+<li><b>airë</b> (<b>airi-</b>) <i>n. and adj.</i> “holiness; holy”</li>
 <li>^<b>curuni</b> <i>n.</i> “witch”</li>
 <li><b>Eru</b> <i>n.</i> “The One, God”</li>
-<li><b>fairë</b> <i>n.</i> “spirit (disembodied)”</li>
+<li><b>fairë</b> <i>n.</i> “spirit, phantom”</li>
 <li><b>fëa</b> <i>n.</i> “spirit, soul”</li>
 <li><b>húna</b> <i>adj.</i> “accursed”</li>
 <li><b>húta-</b> <i>v.</i> “to curse”
@@ -897,7 +905,7 @@
 <li><b><a href="#c11-3-5-2">11.3.5.2 Nouns ending in <i>s, þ, m, c</i></a></b></li>
 </ul>
 
-<p>Consonantal nouns have different declensions than vocalic nouns, mainly in that they have i-plurals, u-duals and their forms frequently have a joining vowel with case endings that begin with a consonant: <i>e</i> generally but <i>a</i> for the instrumental. This section examines nouns whose stem ends in a single consonant, where the instrumental and partitive plurals often show some sort of consonant assimilation. As with vocalic nouns, long consonantal nouns whose second-to-last syllable is light (having a short vowel followed by zero or one consonant) show prosodic lengthening, as discussed in <a href="eldamo-intro-quenya-06.html#c6-1-3">Chapter 6, Section §6.1.3</a>.</p>
+<p>Consonantal nouns have different declensions than vocalic nouns, mainly in that they have i-plurals, <i>u</i>-duals and their forms frequently have a joining vowel with case endings that begin with a consonant: <i>e</i> generally but <i>a</i> for the instrumental. This section examines nouns whose stem ends in a single consonant, where the instrumental and partitive plurals often show some sort of consonant assimilation. As with vocalic nouns, long consonantal nouns whose second-to-last syllable is light (having a short vowel followed by zero or one consonant) show prosodic lengthening, as discussed in <a href="eldamo-intro-quenya-06.html#c6-1-3">Chapter 6, Section §6.1.3</a>.</p>
 
 <p><a id="c11-3-5-1"></a><b>11.3.5.1 Nouns ending in <i>l, n, r, t</i>:</b> Nouns ending in <i>l, n, r, t</i> have stem forms identical to their uninflected forms, but generally show consonant assimilations in the instrumental and partitive-plural forms. The examples here are <i>tecil</i> “pen”, <i>atar</i> “father”, <i>tirion</i> “watch tower”, and <i>imbilat</i> “deep valley”; these last two represent long consonantal noun as well.</p>
 
@@ -1143,7 +1151,7 @@
 
 <h2><a id="c11-3-7"></a>11.3.7 Vocalic Monosyllables</h2>
 
-<p>There is one final small class of nouns Tolkien mentioned the <i>Declension of Nouns</i> (PE21/38-40) and in some later writings as well (VT47/12, 34-36): monosyllabic nouns ending in a vowel. These nouns are the result of either a lost weak consonant in ancient Elvish such as *<i>maha</i> &gt; <i>má</i> “hand”, or derivation from ancient nouns that were themselves monosyllabic such as *<i>pē</i> &gt; <i>pé</i> “(closed) mouth”. Such nouns almost invariably have a long vowel. For the most part, they are declined like vocalic nouns, but with shortening of their long vowel (1) before suffixes with clusters or (2) with suffixes beginning with <i>i</i> which then form a diphthong. Their duals and plurals tend to be irregular, sometimes showing <i>-r, -t</i> but sometimes preserving more ancient i-plurals and u-duals instead.</p>
+<p>There is one final small class of nouns Tolkien mentioned the <i>Declension of Nouns</i> (PE21/38-40) and in some later writings as well (VT47/12, 34-36): monosyllabic nouns ending in a vowel. These nouns are the result of either a lost weak consonant in ancient Elvish such as *<i>maha</i> &gt; <i>má</i> “hand”, or derivation from ancient nouns that were themselves monosyllabic such as *<i>pē</i> &gt; <i>pé</i> “(closed) mouth”. Such nouns almost invariably have a long vowel. For the most part, they are declined like vocalic nouns, but with shortening of their long vowel (1) before suffixes with clusters or (2) with suffixes beginning with <i>i</i> which then form a diphthong. Their duals and plurals tend to be irregular, sometimes showing <i>-r, -t</i> but sometimes preserving more ancient i-plurals and <i>u</i>-duals instead.</p>
 
 <p>The examples here are <i>má</i> “hand”, <i>pé</i> “(closed) mouth”, <i>pí</i> “small insect, fly”, <i>hó</i> “owl”, <i>sú</i> “sound of wind”.</p>
 
@@ -1232,7 +1240,7 @@
 <li>Note ²: Where the case suffix for these nouns begins with a consonant cluster, such as with the directional cases, the long vowel shortens. There is an exception for w- and y-clusters like (<span class="advanced-topic">speculative</span>) <i>-twa</i> which allow a preceding long vowel. This applies to possessive pronoun suffixes as well: <i>márya</i> “his/her hand” (LotR/377; PE22/160).</li>
 <li>Note ³: Plural suffixes that begin with an <i>i</i> will result in diphthongs when added to a-, o- and u-monosyllables, which likewise shortens the long vowel such as with dative plural <i>main</i> “of hands” (PE17/161).</li>
 <li>Note ⁴: With e-monosyllables, any plural <i>i</i> suffixes would become <i>í</i>, since <i>ei</i> &gt; <i>í</i> in Quenya’s phonetic development. As a result, the plural forms of <i>pé</i> “(closed) mouth” and <i>pí</i> “small insect” would collide. In practice this is not an issue because the plurals of <i>pé</i> are not used, being replaced by their partitive plurals instead.</li>
-<li>Note ⁵: The u-duals usually show a long <i>u</i> in the possessive (<i>-úva</i>) and instrumental (<i>-únen</i>), but this is not possible when they are preceded by a vowel like <i>peu</i> “two lips”: <i>peuva</i> “of two lips”, <i>peunen</i> “by two lips’”. <span class="advanced-topic">Speculative:</span> The genitive <i>peuo</i> “of two lips” is probably stressed on its middle vowel: <i>peùo</i>. Alternately it might use a glide consonant: <i>peuvo</i>.</li>
+<li>Note ⁵: The <i>u</i>-duals usually show a long <i>u</i> in the possessive (<i>-úva</i>) and instrumental (<i>-únen</i>), but this is not possible when they are preceded by a vowel like <i>peu</i> “two lips”: <i>peuva</i> “of two lips”, <i>peunen</i> “by two lips’”. <span class="advanced-topic">Speculative:</span> The genitive <i>peuo</i> “of two lips” is probably stressed on its middle vowel: <i>peùo</i>. Alternately it might use a glide consonant: <i>peuvo</i>.</li>
 <li>Note ⁶: The vocalic monosyllables retain their long vowel before the genitive singular suffix <i>-o</i>, even in the case of a-monosyllables: <i>máo</i> “of a hand” (PE17/161). <span class="advanced-topic">Speculative:</span> The genitives of o-monosyllables have <i>uo</i> for reasons similar to those of oa-nouns (see <a href="#c11-3-1-2">section §11.3.1.2</a> above), except that by analogy with u-monosyllables the <i>u</i> become long: <i>húo</i> “of an owl”.</li>
 </ul>
 
@@ -1255,7 +1263,7 @@
 <li><b>heru</b> <i>n.</i> “lord”</li>
 <li>^<b>heru-</b> <i>v.</i> “to rule”
 <ul><li><i>pa.t.</i> *<b>herunë</b> “ruled”</li></ul></li>
-<li><b>hildë</b> (<b>hildi-</b>) <i>n.</i> “heir, follower”</li>
+<li>#<b>hildë</b> (<b>hildi-</b>) <i>n.</i> “heir, follower”</li>
 <li><b>mól</b> <i>n.</i> “slave”</li>
 <li><b>núro</b> <i>n.</i> “servant”</li>
 <li><b>omentië</b> <i>n.</i> “meeting”</li>
@@ -1302,8 +1310,6 @@
 
 <ul class="vocab-list">
 <li><b>alasaila</b> <i>adj.</i> “unwise”</li>
-<li><b>auta-</b> <i>v.</i> “to invent”
-<ul><li><i>pa.t.</i> *<b>autanë</b> “invented”</li></ul></li>
 <li><b>enyal-</b> <i>v.</i> “to recall, remember”
 <ul><li><i>pa.t.</i> *<b>enyallë</b> “recalled, remembered”</li></ul></li>
 <li><b>finya</b> <i>adj.</i> “clever”</li>
@@ -1328,7 +1334,7 @@
 <li><b>saila</b> <i>adj.</i> “wise”</li>
 <li>#<b>sana-</b> <i>v.</i> “to think”
 <ul><li><i>pa.t.</i> *<b>sananë</b> “thought”</li></ul></li>
-<li><b>sanar</b> <i>n.</i> “mind”</li>
+<li><b>sanar</b> <i>n.</i> “mind, thinker”</li>
 <li><b>sanwë</b> <i>n.</i> “thought”</li>
 <li><b>sav-</b> <i>v.</i> “to believe”
 <ul><li><i>pa.t.</i> *<b>sávë</b> “believed”</li></ul></li>
@@ -1345,7 +1351,7 @@
 <li><b>airë</b> (<b>airi-</b>) <i>n.</i> “holiness”</li>
 <li>^<b>curuni</b> <i>n.</i> “witch”</li>
 <li><b>Eru</b> <i>n.</i> “The One, God”</li>
-<li><b>fairë</b> <i>n.</i> “spirit (disembodied)”</li>
+<li><b>fairë</b> <i>n.</i> “spirit, phantom”</li>
 <li><b>fëa</b> <i>n.</i> “spirit, soul”</li>
 <li><b>húna</b> <i>adj.</i> “accursed”</li>
 <li><b>húta-</b> <i>v.</i> “to curse”
@@ -1376,7 +1382,7 @@
 <li><b>heru</b> <i>n.</i> “lord”</li>
 <li>^<b>heru-</b> <i>v.</i> “to rule”
 <ul><li><i>pa.t.</i> *<b>herunë</b> “ruled”</li></ul></li>
-<li><b>hildë</b> (<b>hildi-</b>) <i>n.</i> “heir, follower”</li>
+<li>#<b>hildë</b> (<b>hildi-</b>) <i>n.</i> “heir, follower”</li>
 <li><b>mól</b> <i>n.</i> “slave”</li>
 <li><b>núro</b> <i>n.</i> “servant”</li>
 <li><b>omentië</b> <i>n.</i> “meeting”</li>
