--- a/src/main/webapp/intro-quenya/index.html
+++ b/src/main/webapp/intro-quenya/index.html
@@ -17,21 +17,26 @@
 <body>
 
 <center><h1><u>Eldamo Introductory Quenya</u></h1></center>
+<center>by Paul Strack</center>
 
 <p>This is a placeholder table of contents @@@</p>
 
 <ul>
-<li><b><a href="eldamo-intro-quenya-01.html">Chapter 1</a></b></li>
-<li><b><a href="eldamo-intro-quenya-02.html">Chapter 2</a></b></li>
-<li><b><a href="eldamo-intro-quenya-03.html">Chapter 3</a></b></li>
-<li><b><a href="eldamo-intro-quenya-04.html">Chapter 4</a></b></li>
-<li><b><a href="eldamo-intro-quenya-05.html">Chapter 5</a></b></li>
-<li><b><a href="eldamo-intro-quenya-06.html">Chapter 6</a></b></li>
-<li><b><a href="eldamo-intro-quenya-07.html">Chapter 7</a></b></li>
-<li><b><a href="eldamo-intro-quenya-08.html">Chapter 8</a></b></li>
-<li><b><a href="eldamo-intro-quenya-09.html">Chapter 9</a></b></li>
-<li><b><a href="eldamo-intro-quenya-10.html">Chapter 10</a></b></li>
-<li><b><a href="eldamo-intro-quenya-11.html">Chapter 11</a></b></li>
+<li><b><a href="eldamo-intro-quenya-01.html">Chapter 1</a></b> - Course Introduction, Quenya Crash Course</li>
+<li><b><a href="eldamo-intro-quenya-02.html">Chapter 2</a></b> - Vowel Pronunciation, Basic Verb Classes, “To Be” Verbs</li>
+<li><b><a href="eldamo-intro-quenya-03.html">Chapter 3</a></b> - Consonant Pronunciation, Pronouns, Commands and Wishes</li>
+<li><b><a href="eldamo-intro-quenya-04.html">Chapter 4</a></b> - Tengwar Basics, Plurals, Past Tenses</li>
+<li><b><a href="eldamo-intro-quenya-05.html">Chapter 5</a></b> - Advanced Tengwar, Duals, Dative, Perfect Tense, Negation</li>
+<li><b><a href="eldamo-intro-quenya-06.html">Chapter 6</a></b> - Vowel Shifts, Partitive Plural, Genitive and Possessive</li>
+<li><b><a href="eldamo-intro-quenya-07.html">Chapter 7</a></b> - More Pronouns, Verbal Nouns, Adverbial Noun Cases</li>
+<li><b><a href="eldamo-intro-quenya-08.html">Chapter 8</a></b> - More Verb Classes, Interrogatives</li>
+<li><b><a href="eldamo-intro-quenya-09.html">Chapter 9</a></b> - Verbal Adjectives, Passive Voice, Adverbs, Comparison</li>
+<li><b><a href="eldamo-intro-quenya-10.html">Chapter 10</a></b> - Subordinate Clauses, Demonstratives, Reflexives, Verbal Modality</li>
+<li><b><a href="eldamo-intro-quenya-11.html">Chapter 11</a></b> - Compound Tenses, Subjunctive, More Noun Classes</li>
+<li><b><a href="eldamo-intro-quenya-12.html">Chapter 12</a></b> - Grammar Summary</li>
+<li><b><a href="eldamo-intro-quenya-13.html">Chapter 13</a></b> - Quenya to English Glossary</li>
+<li><b><a href="eldamo-intro-quenya-14.html">Chapter 14</a></b> - English to Quenya Glossary</li>
+<li><b><a href="eldamo-intro-quenya-15.html">Chapter 15</a></b> - All Exercises</li>
 </ul>
 
 <center><h1><u>Memrise Vocabulary Courses</u></h1></center>
@@ -39,17 +44,17 @@
 <p>Here are some links to vocabulary drills on the Memrise platform. To make typing answers easier, the memrise vocabulary omits all diaresis: <i>taure</i> not <i>taurë</i>.</p>
 
 <ul>
-<li><b><a href="https://app.memrise.com/course/6329970/eldamo-intro-quenya-ch-1/">Vocabulary for Chapter 1</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6334816/eldamo-intro-quenya-ch-2/">Vocabulary for Chapter 2</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6340132/eldamo-intro-quenya-ch-3/">Vocabulary for Chapter 3</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6343426/eldamo-intro-quenya-ch-4/">Vocabulary for Chapter 4</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6350684/eldamo-intro-quenya-ch-5/">Vocabulary for Chapter 5</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6352203/eldamo-intro-quenya-ch-6/">Vocabulary for Chapter 6</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6353711/eldamo-intro-quenya-ch-7/">Vocabulary for Chapter 7</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6357574/eldamo-intro-quenya-ch-8/">Vocabulary for Chapter 8</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6358068/eldamo-intro-quenya-ch-9/">Vocabulary for Chapter 9</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6361771/eldamo-intro-quenya-ch-10/">Vocabulary for Chapter 10</a></b></li>
-<li><b><a href="https://app.memrise.com/course/6366933/eldamo-intro-quenya-ch-11/">Vocabulary for Chapter 11</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6329970/eldamo-intro-quenya-ch-1/">Memrise Vocabulary for Chapter 1</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6334816/eldamo-intro-quenya-ch-2/">Memrise Vocabulary for Chapter 2</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6340132/eldamo-intro-quenya-ch-3/">Memrise Vocabulary for Chapter 3</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6343426/eldamo-intro-quenya-ch-4/">Memrise Vocabulary for Chapter 4</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6350684/eldamo-intro-quenya-ch-5/">Memrise Vocabulary for Chapter 5</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6352203/eldamo-intro-quenya-ch-6/">Memrise Vocabulary for Chapter 6</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6353711/eldamo-intro-quenya-ch-7/">Memrise Vocabulary for Chapter 7</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6357574/eldamo-intro-quenya-ch-8/">Memrise Vocabulary for Chapter 8</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6358068/eldamo-intro-quenya-ch-9/">Memrise Vocabulary for Chapter 9</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6361771/eldamo-intro-quenya-ch-10/">Memrise Vocabulary for Chapter 10</a></b></li>
+<li><b><a href="https://app.memrise.com/course/6366933/eldamo-intro-quenya-ch-11/">Memrise Vocabulary for Chapter 11</a></b></li>
 </ul>
 
 </body>
